--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,7 +45,7 @@ ul {
 }
 
 .gallery {
-  height: 250px;
+  height: 350px;
 }
 
 .bold {
@@ -57,8 +57,13 @@ ul {
   border: 1px solid #efefef;
 }
 
+/* Quick hack to fix icons on about page */
+
 .gray {
   color: #333;
+}
+.gray:hover {
+  color: #007bff;
 }
 
 .card-transparent {
@@ -371,6 +376,11 @@ nav.navbar {
 .quotes-carousel {
   position: relative;
   width: 100%;
+}
+
+.carousel-image {
+  height: 54px;
+  margin: 0 auto;
 }
 
 .quote {
