--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -180,7 +180,8 @@ h3 {
 /* ----------------------------- */
 
 .btn-primary,
-.btn-outline-primary {
+.btn-outline-primary,
+.btn-white {
   padding: 10px 30px;
   border-radius: 200px;
   -webkit-border-radius: 200px;
@@ -198,18 +199,31 @@ h3 {
 
 .btn-outline-primary {
   border: 1px solid #dbb827;
-  background-color: #fff;
+  background-color: transparent;
   color: #dbb827;
+}
+
+.btn-white {
+  background-color: #fff;
+  color: #333;
+  border: 1px solid #fff;
+  display: inline-block;
+  margin-top: 10px;
 }
 
 .btn-primary:hover,
 .btn-primary:active,
 .btn-outline-primary:hover,
 .btn-outline-primary:active,
+.btn-white:hover,
+.btn-white:active,
 input[type="submit"]:hover,
 input[type="submit"]:active {
   background-color: #968451;
   border: 1px solid #968451;
+  text-decoration: none;
+  color: #fff;
+  transition: 0.2s ease-in;
 }
 
 #submit-button {
@@ -324,7 +338,7 @@ nav.navbar {
 
 .service__link {
   text-decoration: none;
-  color: #fff;
+  color: #333;
   transition: 0.4s;
 }
 
@@ -361,17 +375,13 @@ nav.navbar {
 }
 
 .tracking {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
     url(imgs/tracker.jpg);
   min-height: 50vh;
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
   color: #fff;
-}
-
-.services__right {
-  justify-self: flex-end;
 }
 
 .quotes-carousel-container {
@@ -413,10 +423,17 @@ nav.navbar {
     opacity 0.5s 0.6s ease-out,
     -webkit-transform 1.5s cubic-bezier(0.25, 0.1, 0.25, 1);
   width: 16em;
+  min-height: 14em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 8px;
+  border: 1px solid #4d4637;
 }
 
 .quote-text {
-  padding-top: 16px;
+  padding: 16px;
+  margin-top: 8px;
 }
 
 .quote.previous {
@@ -441,6 +458,19 @@ nav.navbar {
 .quote.left {
   -webkit-transform: translate(calc(-150% - 12em), -50%) scale(0.6);
   transform: translate(calc(-150% - 12em), -50%) scale(0.6);
+}
+
+.left-carousel-arrow {
+  position: absolute;
+  left: -180px;
+  top: 100px;
+  font-size: 2em;
+}
+.right-carousel-arrow {
+  position: absolute;
+  right: -180px;
+  top: 100px;
+  font-size: 2em;
 }
 
 /* styling pips */
@@ -526,7 +556,7 @@ nav.navbar {
 }
 
 .information__link {
-  color: #fff;
+  color: #333;
   text-decoration: none;
   display: inline-block;
   width: 100%;
@@ -624,7 +654,7 @@ nav.navbar {
 }
 
 .section-features-special {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url(imgs/hurricane.jpg);
   background-size: cover;
   background-position: center;
@@ -825,17 +855,19 @@ footer {
 
 .get-quote-button {
   position: fixed;
-  right: 100px;
-  bottom: 80px;
+  right: 60px;
+  bottom: 0px;
   z-index: 5;
 }
 
 .get-quote-btn {
-  height: 70px;
-  width: 110px;
+  height: 35px;
+  width: 130px;
   border: 0;
   background: #dbb827;
   box-shadow: 0 0 3px 3px #dbb72736;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
 .get-quote-btn img {
@@ -862,6 +894,8 @@ footer {
   max-height: 500px;
   width: 100%;
   object-fit: cover;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 @media (min-width: 992px) {
@@ -875,6 +909,6 @@ footer {
   }
 }
 
-.bg-black {
+/* .bg-black {
   background-color: #4d4637 !important;
-}
+} */
